Bug 453388 - Unable to empty the volume label of FAT32.
Summary: Unable to empty the volume label of FAT32.
Status: RESOLVED FIXED
Alias: None
Product: partitionmanager
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.04.0
Platform: Manjaro Linux
: NOR normal
Target Milestone: ---
Assignee: Andrius Štikonas
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-05-04 13:59 UTC by daiaji
Modified: 2022-05-15 22:22 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.08.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description daiaji 2022-05-04 13:59:28 UTC
SUMMARY
***
Unable to empty the volume label of FAT32.

sudo fatlabel /dev/disk/by-partlabel/ESP ""
fatlabel: labels can't be empty or white space only

I guess it's because of dosstools v4 2 added new restrictions.

sudo fatlabel -r /dev/disk/by-partlabel/ESP

The R parameter is very useful.

***


STEPS TO REPRODUCE
1. Set the volume label with empty content for FAT32.

OBSERVED RESULT
The volume label is not empty.

EXPECTED RESULT
The volume label is empty.

SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 daiaji 2022-05-06 03:41:10 UTC
It's actually the partition manager that can't clear the FAT32 volume label.
As for the part of dosstools, I just speculate that it may be because the partition manager may use dosstools.
Comment 2 Andrius Štikonas 2022-05-15 22:21:32 UTC
Git commit fd4a3308879fcf4e59c3f9c199c28c95d04440f5 by Andrius Štikonas.
Committed on 15/05/2022 at 22:20.
Pushed by stikonas into branch 'master'.

Allow setting empty FAT label.

This breaks compatibility with dosfstools 4.1

M  +2    -3    src/fs/fat12.cpp

https://invent.kde.org/system/kpmcore/commit/fd4a3308879fcf4e59c3f9c199c28c95d04440f5