Allow setting empty FAT label.

This breaks compatibility with dosfstools 4.1

BUG: 453388